update some routes and views:

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,14 @@
-html {
-    background-color: brown;
+main {
+    background-color: brown; 
+    height: 100%;
+    overflow: scroll;
+}
+
+a, a:hover {
+    text-decoration: none;
+    color: inherit;
+}
+
+.form-text {
+    color: yellow;
 }
