update post in dashboard feature

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,5 +10,5 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
     <a href="/signup">Sign up now!</a>
-    <script src="./js/login.js"></script>
+    <script src="/js/login.js"></script>
 </form>
