--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -11,5 +11,5 @@
         <div id="passwordHelpBlock" class="form-text">Your password must be at least 6 characters long.</div>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
-    <script src="./js/signup.js"></script>
+    <script src="/js/signup.js"></script>
 </form>
